# VO_Kit

./: .gitignore  CMakeLists.txt  README.md
module/alignment/: CMakeLists.txt
module/alignment/include/: base.hpp  feature_alignment.hpp  sparse_image_alignment.hpp
module/alignment/src/: base.cpp  sparse_image_alignment.cpp
module/alignment/test/: test_sparse_img_align.cpp
module/math_utils/: CMakeLists.txt
module/math_utils/include/: math_base.hpp  optimizer_base.h  optimizer_base.hpp
module/math_utils/src/: optimizer_base.cpp
module/math_utils/test/: test_optimizer.cpp
